# gunbullet

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  bench.sh  debug.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  aiohttp_server.py  asgi.py  db.py
benchmarks/: test_perf.py
bullet/: __init__.py  _http.py  _routing.py  _types.py  app.py  testclient.py
example/: README.md  __init__.py  main.py
gunbullet/: __init__.py  _http.py  _router.py  _router_py.py  _routing.py  _types.py  app.py  params.py  testclient.py
src/: lib.rs
tests/: conftest.py  test_app_state.py  test_base.py  test_lifespan.py  test_methods.py  test_params.py  types.py
