[project]
name = "bullet"
version = "0.1.0"
description = "microframework fast as bullet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.21.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "anyio>=3.6.2,<5",
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
