[project]
name = "gunbullet"
version = "0.1.0"
description = "A small async web micro-framework built directly on the raw ASGI protocol"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "gunlinux", email = "gunlinuxtemp@gmail.com" }]
keywords = ["asgi", "web", "framework", "microframework", "async", "msgspec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.21.1",
    "uvicorn[standard]>=0.49.0",
]

[project.urls]
Homepage = "https://github.com/gunlinux/gunbullet"
Repository = "https://github.com/gunlinux/gunbullet"
Issues = "https://github.com/gunlinux/gunbullet/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gunbullet"]

[dependency-groups]
dev = [
    "anyio>=3.6.2,<5",
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
