[project]
name = "gunbullet"
version = "0.1.0"
description = "A small async web micro-framework built directly on the raw ASGI protocol"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "gunlinux", email = "gunlinuxtemp@gmail.com" }]
keywords = ["asgi", "web", "framework", "microframework", "async", "msgspec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.21.1",
    "uvicorn[standard]>=0.49.0",
]

[project.urls]
Homepage = "https://github.com/gunlinux/gunbullet"
Repository = "https://github.com/gunlinux/gunbullet"
Issues = "https://github.com/gunlinux/gunbullet/issues"

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
# Mixed Rust/Python layout: the Python package stays at the repo root
# (gunbullet/) and the compiled router is dropped in beside it as
# gunbullet/_gunbullet_router. The pure-Python PyRouter is the runtime
# fallback (see gunbullet/_router.py), so the package still imports from an
# sdist or on a platform without a prebuilt wheel.
python-source = "."
module-name = "gunbullet._gunbullet_router"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "anyio>=3.6.2,<5",
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "maturin>=1.7,<2",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
# Keep the default `pytest` / `make test` run scoped to the unit tests; the
# in-process performance benchmarks live under benchmarks/ and run via `make bench`.
testpaths = ["tests"]
